tests/ui/consts/const-blocks/fn-call-in-non-const.stderr
error[E0277]: the trait bound `Bar: Copy` is not satisfied
  --> $DIR/fn-call-in-non-const.rs:14:32
   |
LL |     let _: [Option<Bar>; 2] = [no_copy(); 2];
   |                                ^^^^^^^^^ the trait `Copy` is not implemented for `Bar`
   |
   = note: required for `Option<Bar>` to implement `Copy`
   = note: the `Copy` trait is required because this value will be copied for each element of the array
help: consider annotating `Bar` with `#[derive(Copy)]`
   |
LL + #[derive(Copy)]
LL | struct Bar;
   |
help: create an inline `const` block
   |
LL |     let _: [Option<Bar>; 2] = [const { no_copy() }; 2];
   |                                +++++++           +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
